<resources>
    <string name="app_name">CookWhat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emailaddr">Email Address</string>
    <string name="profile">Profile</string>
    <string name="view">View</string>
    <string name="search">Search</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="utensils">Utensils</string>
    <string name="add_utensils">Add Utensils</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="ingredients_market">Ingredients Market</string>
    <string name="find_ingredients">Find ingredients</string>
    <string name="cant_find_ingredients">Ingredient Not found? Add this</string>
    <string name="edit_photos">Edit photos</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="no_photo_selected">No photo selected</string>
    <string name="no_ingredient_needed">No ingredients needed</string>
    <string name="no_utensils_needed">No utensils needed</string>
    <string name="title">Title</string>
    <string name="recipe_caption">Recipe Caption______________________________________________________________________________________________________________________________</string>
    <string name="create_caption_instruction">Add a caption to this photo, leave it blank if the caption is same as the previous photo...</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_photo">&lt;&lt; Add photo</string>
    <string name="preview">Preview</string>
    <string name="edit_sequence_and_delete">&lt;&lt; Edit sequence and delete</string>
    <string name="click_on_the_item_to_edit_quantity">Click on the item to edit quantity</string>
    <string name="no_ingredient_added">No ingredient added</string>
    <string name="no_utensil_added">No utensil added</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="search_result">Search Result</string>
    <string name="ingredient_dont_have">Ingredient(s) you don\'t have: </string>
    <string name="utensil_dont_have">Utensil(s) you don\'t have: </string>
    <string name="no_recipe_found">No recipe found :(</string>
    <string name="back">Back</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_wont_be_able_to_revert_this">You will not be able to revert this!</string>
    <string name="fav_categories">Add to:</string>
    <string name="european">European</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="arabic">Arabic</string>
    <string name="southeastasia">South-East Asia</string>
    <string name="chinese">Chinese</string>
    <string name="japan">Japanese</string>
    <string name="korea">Korean</string>
    <string name="india">Indian</string>
    <string name="delete">Delete</string>
    <string name="recipe">Recipe</string>
    <string name="user">User</string>
    <string name="no_result_found">No result found :(</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="no_favourite">No favourite recipe in this category.</string>

    <string name="i0000_acorn">Acorn</string>
    <string name="i0001_ajinomoto">Ajinomoto</string>
    <string name="i0002_apple">Apple</string>
    <string name="i0003_aubergine">Aubergine</string>
    <string name="i0004_avocado">Avocado</string>
    <string name="i0005_bacon">Bacon</string>
    <string name="i0006_banana">Banana</string>
    <string name="i0007_bbq_sauce">Bbq Sauce</string>
    <string name="i0008_beef">Beef</string>
    <string name="i0009_beer">Beer</string>
    <string name="i0010_beet">Beet</string>
    <string name="i0011_blueberries">Blueberries</string>
    <string name="i0012_bread">Bread</string>
    <string name="i0013_broccoli">Broccoli</string>
    <string name="i0014_butter">Butter</string>
    <string name="i0015_cabbage_green">Cabbage</string>
    <string name="i0016_canteloupe">Canteloupe</string>
    <string name="i0017_carrot">Carrot</string>
    <string name="i0018_cauliflower">Cauliflower</string>
    <string name="i0019_celery">Celery</string>
    <string name="i0020_cheese">Cheese</string>
    <string name="i0021_cherry">Cherry</string>
    <string name="i0022_chicken">Chicken</string>
    <string name="i0023_chili_pepper">Chili Pepper</string>
    <string name="i0024_chilli">Chilli</string>
    <string name="i0025_coconut">Coconut</string>
    <string name="i0026_coffee">Coffee</string>
    <string name="i0027_coke">Coke</string>
    <string name="i0028_corn">Corn</string>
    <string name="i0029_cranberries">Cranberries</string>
    <string name="i0030_crookneck">Crookneck</string>
    <string name="i0031_cucumber">Cucumber</string>
    <string name="i0032_dark_chocolate">Dark Chocolate</string>
    <string name="i0033_dark_soy_sauce">Dark Soy Sauce</string>
    <string name="i0034_dragonfruit">Dragonfruit</string>
    <string name="i0035_duck">Duck</string>
    <string name="i0036_egg">Egg</string>
    <string name="i0037_eggplant">Eggplant</string>
    <string name="i0038_fish">Fish</string>
    <string name="i0039_flour">Flour</string>
    <string name="i0040_garlic">Garlic</string>
    <string name="i0041_ginger">Ginger</string>
    <string name="i0042_grapes">Grapes</string>
    <string name="i0043_ham">Ham</string>
    <string name="i0044_honey">Honey</string>
    <string name="i0045_honeydew">Honeydew</string>
    <string name="i0046_jalapeno">Jalapeno</string>
    <string name="i0047_jam">Jam</string>
    <string name="i0048_kale">Kale</string>
    <string name="i0049_ketchup">Ketchup</string>
    <string name="i0050_kuazi">Kuazi</string>
    <string name="i0051_lemon">Lemon</string>
    <string name="i0052_lettuce">Lettuce</string>
    <string name="i0053_lime">Lime</string>
    <string name="i0054_mango">Mango</string>
    <string name="i0055_mangosteen">Mangosteen</string>
    <string name="i0056_mayonnaise">Mayonnaise</string>
    <string name="i0057_milk">Milk</string>
    <string name="i0058_mushroom_white">Mushroom White</string>
    <string name="i0059_mustard">Mustard</string>
    <string name="i0060_mutton">Mutton</string>
    <string name="i0061_noodles">Noodles</string>
    <string name="i0062_oil">Oil</string>
    <string name="i0063_onion_green">Onion Green</string>
    <string name="i0064_onion_red">Onion Red</string>
    <string name="i0065_onion_white">Onion White</string>
    <string name="i0066_orange">Orange</string>
    <string name="i0068_ox_sauce">Ox Sauce</string>
    <string name="i0069_oyster_sauce">Oyster Sauce</string>
    <string name="i0070_papaya">Papaya</string>
    <string name="i0071_pea">Pea</string>
    <string name="i0072_peach">Peach</string>
    <string name="i0073_pear">Pear</string>
    <string name="i0074_peas">Peas</string>
    <string name="i0075_pepper_green">Pepper Green</string>
    <string name="i0076_pepper_red">Pepper Red</string>
    <string name="i0077_pepper_yellow">Pepper Yellow</string>
    <string name="i0078_pepper">Pepper</string>
    <string name="i0079_pineapple">Pineapple</string>
    <string name="i0080_pomegranate">Pomegranate</string>
    <string name="i0081_pork">Pork</string>
    <string name="i0082_potato">Potato</string>
    <string name="i0083_prawn">Prawn</string>
    <string name="i0084_pumpkin">Pumpkin</string>
    <string name="i0085_radish">Radish</string>
    <string name="i0086_raspberries">Raspberries</string>
    <string name="i0087_rice">Rice</string>
    <string name="i0088_rutabaga">Rutabaga</string>
    <string name="i0089_salt">Salt</string>
    <string name="i0090_sausages">Sausages</string>
    <string name="i0091_sesame_oil">Sesame Oil</string>
    <string name="i0092_shallot">Shallot</string>
    <string name="i0093_shrimp">Shrimp</string>
    <string name="i0094_soy_sauce">Soy Sauce</string>
    <string name="i0095_spinach">Spinach</string>
    <string name="i0096_starfruit">Starfruit</string>
    <string name="i0097_strawberries">Strawberries</string>
    <string name="i0098_sugar">Sugar</string>
    <string name="i0099_tea">Tea</string>
    <string name="i0100_teriyaki_sauce">Teriyaki Sauce</string>
    <string name="i0101_tile003">Tile003</string>
    <string name="i0102_tofu">Tofu</string>
    <string name="i0103_tomato">Tomato</string>
    <string name="i0104_turmeric">Turmeric</string>
    <string name="i0105_turnip">Turnip</string>
    <string name="i0106_vineger">Vineger</string>
    <string name="i0107_water">Water</string>
    <string name="i0108_watermelon">Watermelon</string>
    <string name="i0109_white_chocolate">White Chocolate</string>
    <string name="i0110_wine">Wine</string>
    <string name="i0111_yam">Yam</string>
    <string name="i0112_yeast">Yeast</string>
    <string name="i0113_zucchini">Zucchini</string>
    <string name="u0000_big_pot">Big Pot</string>
    <string name="u0001_blender">Blender</string>
    <string name="u0002_coffee_maker">Coffee Maker</string>
    <string name="u0003_grater">Grater</string>
    <string name="u0004_knife">Knife</string>
    <string name="u0005_rice_cooker">Rice Cooker</string>
    <string name="u0006_rolling_pin">Rolling Pin</string>
    <string name="u0007_toaster">Toaster</string>
    <string name="u0008_water_heater">Water Heater</string>
    <string name="u0009_oven">Oven</string>
    <string name="u0010_microwave">Microwave</string>
    <string name="register_warning">You are already a user of CookWhat.\nPlease proceed to log in.</string>
    <string name="recipe_image_uri">https://firebasestorage.googleapis.com/v0/b/cookwhat.appspot.com/o/images%2F</string>
    <string-array name="level">
        <item>--Please select your cooking skill level--</item>
        <item>Beginner</item>
        <item>Advanced Beginner</item>
        <item>Competent</item>
        <item>Proficient</item>
        <item>Expert</item>
    </string-array>
    <string-array name="favourite_categories">
        <item>Arabic</item>
        <item>Chinese</item>
        <item>European</item>
        <item>Indian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Mediterranean</item>
        <item>South-East Asia</item>
        <item>Others</item>
    </string-array>


</resources>