<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TVNoIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_ingredient_needed"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/utensils"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TVNoUtensils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_utensils_needed"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVUtensils"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>

</ScrollView>

</RelativeLayout>