<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3CFDD835"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/TVFavCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/fav_categories"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnArabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/arabic"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnChinese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/chinese"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnEuropean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/european"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnIndia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/india"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnJapan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/japan"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnKorea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/korea"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnMediterranean"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/mediterranean"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnSEA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/southeastasia"
                app:backgroundTint="@color/weirdyellow" />

            <Button
                android:id="@+id/BtnOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:text="Others"
                app:backgroundTint="@color/weirdyellow" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>