<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".activities.SearchKeywordResultActivity">

    <TextView
        android:id="@+id/TVKeywordNotFound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/no_result_found"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TVRecipeSearchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/recipe"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/RecipeDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVRecipeKeywordResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TVUserSearchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/user"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/UserDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVUserKeywordResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>