<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/FragementCreateCaption"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.CreateCaptionFragment">

    <EditText
        android:id="@+id/ETCreateRecipeTitle"
        android:layout_width="match_parent"
        android:layout_margin="10px"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:maxLength="50"
        android:hint="@string/title" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/CreateImageSlider"
        android:layout_width="match_parent"
        android:layout_marginTop="25px"
        android:layout_marginBottom="5px"
        android:layout_height="200dp">

    </com.denzcoskun.imageslider.ImageSlider>

    <EditText
        android:id="@+id/ETCreateRecipeCaption"
        android:layout_width="match_parent"
        android:layout_margin="10px"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:hint="@string/create_caption_instruction"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="#" />

        <EditText
            android:id="@+id/ETCreateRecipeTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight="3"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:hint="@string/add_tag" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/BtnAddTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            android:gravity="center"/>
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/ChipGroupTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

</LinearLayout>
</ScrollView>